REGRESSION(225597): Can't select a text box or web view on a page when VO is on. https://bugs.webkit.org/show_bug.cgi?id=180756 <rdar://problem/35996158>

Reviewed by Brent Fulgham.

Source/WebCore:

No new tests.

* platform/mac/EventLoopMac.mm:
(WebCore::EventLoop::cycle):

Source/WebKit:

* Platform/IPC/mac/ConnectionMac.mm:
(IPC::AccessibilityProcessSuspendedNotification):
* UIProcess/Launcher/mac/ProcessLauncherMac.mm:
(WebKit::shouldLeakBoost):
* WebProcess/EntryPoint/mac/XPCService/WebContentService/Info-OSX.plist:
* WebProcess/WebProcess.cpp:
(WebKit::WebProcess::initializeProcess):



Canonical link: https://commits.webkit.org/196673@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225863 268f45cc-cd09-0410-ab3c-d52691b4dbfc